--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "week7a",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --timeout 10000 --exit"
+    "preinstall": "npx npm-force-resolutions"
   },
   "author": "Shawn McCarthy",
   "license": "ISC",
@@ -12,19 +12,23 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.16.2",
-    "jsonwebtoken": "^8.1.1",
-    "mongoose": "^5.7.5",
-    "passport": "^0.4.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.7",
+    "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-jwt": "^3.0.1"
   },
   "devDependencies": {
-    "dotenv": "^6.2.0",
-    "mocha": "^5.2.0",
     "chai": "^4.2.0",
-    "chai-http": "^4.2.0",
-    "sinon": "^7.2.2",
-    "sinon-mongoose": "^2.2.1"
+    "chai-http": "^4.3.0",
+    "dotenv": "^6.2.0",
+    "minimist": "^1.2.5",
+    "mocha": "^5.2.0",
+    "sinon": "^7.5.0",
+    "sinon-mongoose": "^2.3.0"
+  },
+  "resolutions": {
+    "minimist": "^1.2.5"
   }
 }
